# robotteknik

./: README.md
my_simple_controllers/: CMakeLists.txt  package.xml  plugins.xml
my_simple_controllers/include/my_simple_controllers/: state_controller.h
my_simple_controllers/src/: parameters.yaml  state_controller.cpp
robot_models/franka_description/config/: panda_gazebo_control.yaml
robot_models/franka_description/launch/: franka_effort.launch  sim.rviz
robot_models/franka_description/robots/: panda.gazebo.xacro  panda.transmission.xacro  panda_arm.urdf.xacro
robot_models/franka_gazebo/: CMakeLists.txt  package.xml
robot_models/franka_gazebo/bringup/config/: franka_controllers.yaml  goals.yaml  panda.rviz
robot_models/franka_gazebo/bringup/launch/: franka_gz.launch.py  test_gripper.yaml
robot_models/franka_gazebo/src/: test_basic.cpp
robot_models/franka_gazebo/urdf/: hand.xacro  panda_arm.gazebo_ros2_control.xacro  panda_arm.urdf.xacro  panda_arm.xacro
robot_models/rrbot/: CMakeLists.txt  package.xml
robot_models/rrbot/bringup/config/: rrbot_controllers.yaml
robot_models/rrbot/bringup/launch/: rrbot.launch.py
robot_models/rrbot/urdf/: rrbot.urdf.xacro  rrbot_description.urdf.xacro
robot_models/three_dof_planar/: CMakeLists.txt  package.xml
robot_models/three_dof_planar/bringup/config/: rrbot.rviz
robot_models/three_dof_planar/bringup/launch/: rrbot.launch.py
robot_models/three_dof_planar/config/: gazebo_control.yaml
robot_models/three_dof_planar/launch/: 3dof_planar_fakesim.launch  3dof_planar_gazebo.launch  sim.rviz
robot_models/three_dof_planar/urdf/: 3dof_planar.gazebo.xacro  3dof_planar.transmission.xacro  3dof_planar.urdf.xacro  3dof_planar.xacro  rrbot.urdf.xacro
