<?xml version="1.0"?>
<package format="3">
  <name>my_simple_controllers</name>
  <version>0.0.0</version>
  <description>The my_simple_controllers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tsv@todo.todo">tsv</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>  
  <depend>rclcpp_lifecycle</depend>  
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>realtime_tools</depend>  
  <depend>pluginlib</depend>  
  <depend>generate_parameter_library</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
