<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_gazebo</name>
  <version>0.0.1</version>
  <description>Example launch files for panda in gazebo classic</description>
  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>std_msgs</depend>
  <depend>rclcpp</depend>

  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>rqt_joint_trajectory_controller</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
