<?xml version="1.0"?>
<package format="3">
  <name>three_dof_planar</name>
  <version>0.0.1</version>
  <description>Simple robot urdfs</description>

  <maintainer email="todor.stoyanov@oru.se">tsv</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>



</package>
